solved overflowing text issue on 'Central pages.

--- a/serengeti/src/main/webapp/styles/serengeti.css
+++ b/serengeti/src/main/webapp/styles/serengeti.css
@@ -301,9 +301,11 @@ ul.hor_menu {
 }
 
 .hor_menu a {
-	display: block;
-	text-decoration: none;
-	text-align: center;
+display:block;
+text-align:center;
+text-decoration:none;
+width:50px;
+word-wrap:break-word;
 }
 
 .hor_menu span {
